[gd_scene load_steps=7 format=3 uid="uid://b88x37crr1m2y"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_ntmsf"]
[ext_resource type="Texture2D" uid="uid://bl2rumoldvd0q" path="res://Resources/Sprites/buttons/RestartButton.png" id="2_dphf5"]
[ext_resource type="Texture2D" uid="uid://bvqqyfoahj4tk" path="res://Resources/Sprites/buttons/RestartButtonActive.png" id="3_be80v"]
[ext_resource type="FontFile" uid="uid://c0m33guhlk0ui" path="res://Resources/Misc/fonts/Pixellari.ttf" id="3_n5gbx"]

[sub_resource type="FontVariation" id="FontVariation_cpw3e"]
base_font = ExtResource("3_n5gbx")

[sub_resource type="Theme" id="Theme_4i5ic"]
default_font = SubResource("FontVariation_cpw3e")

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_ntmsf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0470588, 0.0941176, 1)

[node name="retryBtn" type="TextureButton" parent="."]
texture_filter = 1
texture_repeat = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -63.5
offset_right = 180.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_dphf5")
texture_hover = ExtResource("3_be80v")
stretch_mode = 5

[node name="scoreElement" type="Label" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -106.0
offset_right = 83.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_4i5ic")
text = "Score: 1234 | Highscore: 1234"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="retryBtn" to="." method="_on_retry_btn_pressed"]
